Fix validation/contrast errors

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,7 +61,7 @@ li > a:hover {
 }
 
 a {
-  color: #008080;
+  color: #007575;
   font-weight: bold;
 }
 
